  * Warn that the generated SSL certificate will expire in 10 years
    instead of 365 days, as it's the lifetime of of self-generated
    certificates since 1:1.2.13-1
  * Updated copyright and package descriptions. Thanks Stephan Bosch.
  * Switch to gbp-pq patch management. Drop all patches but drac
    support. Update pigeonhole to release 0.2.1

 -- Marco Nenciarini <mnencia@debian.org>  Tue, 26 Oct 2010 18:17:40 +0200

dovecot (1:1.2.15-1) unstable; urgency=high

  [ Marco Nenciarini ]
  * New upstream release (Closes: #587036,#597529)
  * Updated policy version to 3.9.1.0 (no changes needed)

  [ Jaldhar H. Vyas ]
  * [SECURITY] Fixes two bugs with acls which could have allowed a user to
    gain improper access or admin rights to shared mailboxes.
    (Closes: #599521)
  * Warn that the generated SSL certificate will expire in 365 days.  Thanks
    Phillip Weis.  (Closes: #576455)
  * Wherever the path to sendmail is given as /usr/lib/sendmail, change to
    /usr/sbin/sendmail.  (Closes: #570814,#595671)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Fri, 08 Oct 2010 17:34:19 -0400

dovecot (1:1.2.13-1) unstable; urgency=low

  [ Jaldhar H. Vyas ]
  * dovecot-common: Upped expiration date of self-generated certificates to
    10 years from 1 year.  (Closes: #587371)

  [ Marco Nenciarini ]
  * New upstream release:
    - Fixed iconv() crash when it was processing several kilobytes of
      broken continuous input. This mainly could have caused a problem
      with IMAP SEARCH. Possibly also with some Sieve checks.
    - If MIME encoded-words contained line feeds, Dovecot logged
      cache corruption errors.
    - mbox: Renaming mailbox under newly created dir didn't move index
      directory.
    - mbox: When generating envelope to From_-line, don't append a second
      @owndomain if username already has one.
  * Updated policy version to 3.9.0.0 (no changes needed)

 -- Marco Nenciarini <mnencia@debian.org>  Mon, 26 Jul 2010 17:03:38 +0200
